# form-builder

./: .env.example  README.md  pyproject.toml  requirements.txt
src/: manage.py
src/apps/authentication/: serializer.py  urls.py  views.py
src/apps/form_engine/: apps.py  models.py  serializer.py  urls.py  views.py
src/apps/form_engine/migrations/: 0001_initial.py
src/apps/form_engine/utils/: field_validation.py
src/apps/users/: apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py  0002_user_role_profile.py  0003_profile_created_by_profile_deleted_at_and_more.py  0004_remove_user_role.py  0005_alter_user_phone.py  0006_user_created_by_user_updated_by.py  0007_user_deleted_at_alter_user_created_at_and_more.py
src/core/: asgi.py  env.py  urls.py  wsgi.py
src/core/config/: base.py  dev.py  prod.py
src/core/db/: mongo.py
src/core/utils/: pagination.py  password_generation.py
src/db/: base.py  manager.py  mixins.py  queryset.py
